Replaced constructor calls with valueOf() method calls to remove static analyzer warnings about inefficient constructor calls
Issue-ID: SO-1841
Signed-off-by: Oleksandr Moliavko <o.moliavko@samsung.com>
Change-Id: If5b0c9c3569759f738e01c0352e267ee8a995c5f